[package]
workspace = ".."
name = "planet-gen"
version = "0.1.0"
authors = ["David Dubois <dexcelstraun7@gmail.com>"]
build = "build.rs"

[lib]
name = "planet_gen"
crate_type = ["cdylib"]

[dependencies]
rand = "0.5.4"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.24"
glm = "0.2.3"

[build-dependencies]
cbindgen = "0.6.1"
